--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,10 @@ dash>=1.13.4
 dash-renderer>=1.5.1
 dash-html-components>=1.0.3
 dash-core-components>=1.10.1
-numpy>=1.18.1
-pandas>=1.0.5
+numpy>=1.19.2
+pandas>=1.1.3
 requests>=2.24.0
 statsmodels>=0.11.0
+gensim>=3.8.3
+snowballstemmer>=2.1.0
+scikit-learn>=0.23.2
